samples/_failures_safe/1761445091_0c4346_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d796e136.c: In function ‘print_token_type’:
./samples/SAFE/__tmp_d796e136.c:150:9: error: expected expression at end of input
  150 |         case
      |         ^~~~
./samples/SAFE/__tmp_d796e136.c:150:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d796e136.c:150:9: error: expected declaration or statement at end of input
